Fix: setting tablet size, welcome text overflow

--- a/src/assets/style/workspace/workspace-setting.scss
+++ b/src/assets/style/workspace/workspace-setting.scss
@@ -6,6 +6,7 @@
 }
 
 .setting-nav {
+  flex: 0 0;
   min-width: 17.143rem;
   margin-right: 2.857rem;
   padding-top: 2.5rem;
@@ -36,6 +37,7 @@
 
 .setting-view {
   display: flex;
+  flex: 1 1;
   flex-direction: column;
   width: 100%;
   // flex-grow: 2;
@@ -73,6 +75,11 @@
     }
     &.horizon {
       display: flex;
+      flex-wrap: wrap;
+    }
+    &.translate {
+      margin-top: 1.215rem;
+      margin-right: 1.143rem;
     }
   }
   // &:first-child {
@@ -92,6 +99,7 @@
 }
 
 .setting-section__body {
+  margin-right: -2.286rem;
   &.horizon {
     display: flex;
     flex-wrap: wrap;
@@ -100,12 +108,12 @@
     margin-top: -1.071rem;
   }
   > figure {
-    max-width: 38.714rem;
+    flex: 0 1 28.571rem;
+    max-width: 28.571rem;
     margin-top: 1.071rem;
     margin-right: 2.286rem;
-    &:last-child {
-      margin-right: 0;
-    }
+    // &:first-child {
+    // }
   }
   & + & {
     margin-top: 0.714rem;
@@ -119,6 +127,10 @@
   &::first-letter {
     text-transform: capitalize;
   }
+}
+.setting-section__translate {
+  flex: 0 1 28.571rem;
+  margin-top: 1.071rem;
 }
 .setting__figure--wrapper {
   display: flex;
@@ -146,13 +158,15 @@
 }
 
 .setting__r-selecter {
-  width: 28.571rem;
+  // width: 28.571rem;
+  width: 100%;
 }
 
 .setting-video {
   display: flex;
-  width: 29rem;
-  height: 20.571rem;
+  max-width: 29rem;
+  min-height: 17rem;
+  max-height: 20.571rem;
   background-color: #111012;
   border: solid 1px #363638;
   > video {
@@ -166,6 +180,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  margin: auto;
   > img {
     width: 3.214rem;
     height: 3.214rem;
